<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR Register</string>
    <string name="dashboard_action">Action</string>
    <string name="description_logo">Google I/O 2010</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="contadorLista"> 8/12 </string>  
    <string name="nombrecancion"> U2- Beautiful Day </string>   
    <string name="now_playing_loading">Looking up nearby sessions\u2026</string>   
    <string name="label_documento">Documento</string>   
    <string name="label_entrada">Entrada</string>   
    <string name="label_tipo_usu">Tipo Usuario</string>   
    <string name="tv_label_codigo_qr">Codigo QR</string>   
    <string name="label_btn_guardar">Guardar</string>   
    <string name="label_btn_cancelar">Cancelar</string>
</resources>
