<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/background1">
	<TableLayout android:layout_height="wrap_content"
		android:id="@+id/tableLayout1" android:layout_width="match_parent">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_marginLeft="10dp" android:text=""
				android:layout_height="wrap_content" android:id="@+id/tv_codigo"
				android:layout_width="match_parent"></TextView>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tv_label_documento" android:text="@string/label_documento" android:layout_marginRight="10dp"></TextView>
			<EditText android:inputType="number"
				android:layout_height="wrap_content" android:id="@+id/ed_documento" android:layout_width="200dp"></EditText>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow3" android:gravity="center_vertical">
			<TextView android:layout_height="wrap_content" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:id="@+id/tv_label_tipo_usu" android:text="@string/label_tipo_usu"></TextView>
			<Spinner android:layout_height="wrap_content" android:id="@+id/sp_tipo_usu" android:layout_width="match_parent"></Spinner>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow4" android:gravity="center_vertical">
			<TextView android:layout_height="wrap_content" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:id="@+id/tv_label_entrada" android:text="@string/label_entrada"></TextView>
			<Spinner android:layout_height="wrap_content" android:id="@+id/sp_entrada" android:layout_width="match_parent"></Spinner>
		</TableRow>
	</TableLayout>
	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow5" android:layout_width="match_parent" android:gravity="center_vertical">
		<ImageView android:src="@drawable/camara" android:layout_height="wrap_content" android:layout_width="wrap_content" android:onClick="capturarImagen" android:id="@+id/btn_portatil"></ImageView>
		<ImageView android:src="@drawable/flecha" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView3"></ImageView>
		<ImageView android:src="@drawable/computador" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView2"></ImageView>
		<ImageView android:src="@android:drawable/ic_menu_report_image" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ivPortatil"></ImageView>
	</TableRow>
	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow6" android:layout_width="match_parent" android:gravity="center_vertical">
		<ImageView android:src="@drawable/camara" android:layout_height="wrap_content" android:layout_width="wrap_content" android:onClick="capturarImagen" android:id="@+id/btn_propietario"></ImageView>
		<ImageView android:src="@drawable/flecha" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ImageView03"></ImageView>
		<ImageView android:src="@drawable/persona" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView4"></ImageView>
	</TableRow>
	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow7" android:layout_width="match_parent">
		<TextView android:id="@+id/label_qr" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_label_codigo_qr"></TextView>
		<ImageView android:src="@drawable/icon" android:id="@+id/imageView6" android:layout_width="100dp" android:layout_height="100dp"></ImageView>
	</TableRow>
	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow8" android:layout_width="match_parent" android:gravity="center_horizontal">
		<Button android:id="@+id/btn_guardar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/label_btn_guardar" android:onClick="guardarRegistro"></Button>
		<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btn_cancelar" android:text="@string/label_btn_cancelar"></Button>
	</TableRow>


</LinearLayout>
